--- a/style.css
+++ b/style.css
@@ -36,6 +36,32 @@ body {
     height: 70px;
     padding: 20px 80px;
 }
+.item {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    gap: 15px;
+}
+
+.item p {
+    cursor: pointer;
+}
+
+.item .store {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.item .store i {
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.item .store a {
+    color: inherit;
+    text-decoration: none;
+}
 
 .bar {
     margin-left: 50px;
